pod-security/restricted/restrict-seccomp-strict/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-seccomp-strict.yaml
assert:
- policy-assert.yaml
