pod-security/restricted/restrict-seccomp-strict/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-seccomp-strict.yaml | kubectl apply -f -
