pod-security/restricted/restrict-seccomp-strict/e2e/bad-cronjob.yaml
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          - name: container02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          - name: container02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Unconfined
          containers:
          - name: container01
            image: busybox:1.35
