pod-security/restricted/restrict-seccomp-strict/e2e/good-cronjob.yaml
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: Localhost
              localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          - name: container02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          securityContext:
            seccompProfile:
              type: Localhost
              localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          - name: container02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob09
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob10
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: busybox:1.35
          securityContext:
            seccompProfile:
              type: RuntimeDefault
