pod-security/restricted/restrict-seccomp-strict/e2e/good-pod.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      localhostProfile: operator/default/profile1.json
      type: Localhost
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: Localhost
      localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: container02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: RuntimeDefault
