pod-security/restricted/restrict-seccomp-strict/e2e/good-resource.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      localhostProfile: operator/default/profile1.json
      type: Localhost
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: container02
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: Localhost
      localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: container02
    image: nginx
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: nginx
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: initcontainer02
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: nginx
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default/profile1.json
  - name: initcontainer02
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  containers:
  - name: container01
    image: nginx
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    seccompProfile:
      type: RuntimeDefault
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      - name: container02
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      - name: container02
        image: nginx
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: nginx
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      - name: initcontainer02
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: nginx
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
      - name: initcontainer02
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: nginx
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: Localhost
              localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          - name: container02
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          securityContext:
            seccompProfile:
              type: Localhost
              localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          - name: container02
            image: nginx
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: nginx
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob09
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: nginx
          - name: initcontainer02
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob10
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: nginx
            securityContext:
              seccompProfile:
                type: Localhost
                localhostProfile: operator/default/profile1.json
          - name: initcontainer02
            image: nginx
            securityContext:
              seccompProfile:
                type: RuntimeDefault
          containers:
          - name: container01
            image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
