pod-security/restricted/restrict-seccomp-strict/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp-strict
spec:
  validationFailureAction: audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
