pod-security/restricted/restrict-seccomp-strict/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-seccomp-strict-policy
spec:
  steps:
  - name: test-restrict-seccomp-strict
    try:
    - apply:
        file: ../restrict-seccomp-strict.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-seccomp-strict.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
